# org_framework_ioda3d

./: .gitignore  .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
doc/: ioda.md
doc/asserts/: .$ioda3d.drawio.bkp  .$ioda3d.drawio.dtmp  ioda3d.drawio
doc/asserts/french/: Présentation de l’Architecture IODA.html
doc/asserts/french/Présentation de l’Architecture IODA_files/: gtm.js  style.css  style_fr.css
doc/french/Présentation de l’Architecture IODA_files/: js  optimize.js
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/pages/: index.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: ioda3d.podspec
ios/Classes/: ioda3d.c
lib/: ioda3d.dart  ioda3d_bindings_generated.dart
linux/: CMakeLists.txt
macos/: ioda3d.podspec
src/: CMakeLists.txt  ioda3d.c
src/io/udt/: LICENSE  api.cpp  core.cpp  core.h
windows/: CMakeLists.txt
(+1 files in other folders)
